test/tests/errors/error-jumpout-id-not-exp.sm
// true
// false
// false
/**/
/**/

program {
    var x: int = jumpout j: int in 1 + j;
}